# pytorch-lightning-sample

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-18-pcb-inspired-augmentations.md
docs/superpowers/specs/: 2026-07-18-pcb-inspired-augmentations-design.md
src/: train.py  transforms.py
src/data/: datamodule.py  imbalance.py
src/losses/: class_balance.py  focal_loss.py
src/models/: classifier.py
